refactor: modify search response skillArray